# CSettings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  csettings.cpp
.github/workflows/: cmake-single-platform.yml
include/: Settings.h  Settings.hpp
libs/: rapidyaml_clear_flag.patch
src/: CMakeLists.txt  Settings.cpp
testapp/: CMakeLists.txt  main.cpp
